fixes for old browsers on mobile devices

--- a/src/Components/Crew/CrewRoute.module.css
+++ b/src/Components/Crew/CrewRoute.module.css
@@ -9,7 +9,6 @@
     flex-direction: column-reverse;
     margin-top: 50px;
     padding-bottom: 80px;
-    gap: 90px;
   }
 }
 
@@ -112,6 +111,7 @@
     min-width: 350px;
     height: 360px;
     min-height: 360px;
+    margin-bottom: 90px;
   }
 }
 
@@ -139,7 +139,10 @@
 .crewNav ul {
   display: flex;
   align-items: center;
-  gap: 20px;
+}
+
+.crewNav ul li:not(:last-child) {
+  margin-right: 20px;
 }
 
 .crewNav ul li a {
